# face-detect-api

./: .gitignore  LICENSE  pyproject.toml
infra/modules/face-detect-api/: api.tf  database.tf  functions.tf  lambdas.tf  main.tf  s3.tf  step-function.tf  variables.tf
infra/modules/face-detect-api/modules/lambda-dependency-layer/: main.tf  outputs.tf  variables.tf
infra/modules/face-detect-api/modules/lambda-function/: main.tf  outputs.tf  variables.tf
infra/modules/face-detect-api/modules/python-dependency-layer/: main.tf  variables.tf
infra/stages/develop/: .terraform.lock.hcl  main.tf  terraform.tfvars  variables.tf
src/face-recognition-lambda/: index.py
src/send-callback-lambda/: index.py
